# llm-parallelism-pytorch

./: .gitignore  .pre-commit-config.yaml  README.md  data.py  main.py  main_ddp_shard.py  model.py  pyproject.toml  run_experiment.sh  run_experiment_ddp.sh  run_experiment_shard.sh
ddp/: __init__.py  bucket_ddp_async.py  simple_ddp.py  simple_ddp_async.py  simple_ddp_ga.py  simple_ddp_hook.py
ddp_sharding/: zero1.py  zero2.py  zero3.py
scripts/: analyze_traces.py  analyze_traces_common.py  analyze_traces_ddp.py  analyze_traces_sharding.py
utils/: ddp_utils.py  memory_utils.py  pt_profiler.py  train_utils.py
